@@ -3,6 +3,7 @@ CHANGELOG
 2.0.44
 UTILS:
 * UTIL type=xml-issue | extend visibility for removing duplicate address/service objects
+* UTIL type=device | introduce actions=manageddevice-create / manageddevice-delete
 
 BUGFIX:
 
